Donate button: fixed post submit loader alignment

--- a/src/sass/page-template-styles.scss
+++ b/src/sass/page-template-styles.scss
@@ -1300,6 +1300,12 @@
       margin-bottom: 0;
     }
   }
+
+  .loader {
+    margin-top: 0;
+    align-self: center;
+  }
+
   #en__upsellModal .en__upsellModal__container {
     --button_border-radius: 20px;
   }
